# Modern-Finance-Tracker

./: CMakeLists.txt  README.md  app.qrc  databasemanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h
